--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-+<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
     <main>
         <article>
             <img src="https://ch0wdhury.github.io/MINIM0/images/service1.jpg" alt="девушка в толпе" width="400" height="270">
-                <h5>Lifestyle</h5>
+                <p>Lifestyle</p>
                     <h2> <a name="More than just a music festival"> More than just a music festival</a></h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
@@ -31,7 +31,7 @@
         </article>
         <article>
             <img src="https://ch0wdhury.github.io/MINIM0/images/service2.jpg" alt="кофе" width="400" height="270">
-                <h5>Lifestyle</h5>
+                <p>Lifestyle</p>
                     <h2> <a name="Life tastes better than coffee"> Life tastes better than coffee</a></h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
@@ -42,7 +42,7 @@
         </article>
         <article>
             <img src="https://ch0wdhury.github.io/MINIM0/images/service3.jpg" alt="девушки и мост" width="400" height="270">
-                <h5>Photodiary</h5>
+                <p>Photodiary</p>
                     <h2> <a name="American dream"> American dream</a></h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
@@ -53,7 +53,7 @@
         </article>
         <article>
             <img src="https://ch0wdhury.github.io/MINIM0/images/service4.jpg" alt="девушка в шапке" width="400" height="270">
-                <h5>Photodiary</h5>
+                <p>Photodiary</p>
                     <h2> <a name="A day exploring the Alps"> A day exploring the Alps</a></h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -62,7 +62,7 @@
                           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
                           deserunt mollit anim id est laborum.</p>
         </article>
-        <a href="https://www.google.com" target="_blank"><button>load more</button></a>
+        <button>load more</button>
     </main>
 </body>
 </html>
