--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
         <nav>
             <ul>
-                <a href="#More than just a music festival"> <li>lifestyle</a></li>
-                <a href="#Life tastes better than coffee"> <li>photodiary</a></li>
-                <a href="#American dream"> <li>music</a></li>
-                <a href="#A day exploring the Alps"> <li>travel</a></li>
+                <a href="#More than just a music festival"> <li>lifestyle</li></a>
+                <a href="#Life tastes better than coffee"> <li>photodiary</li></a>
+                <a href="#American dream"> <li>music</li></a>
+                <a href="#A day exploring the Alps"> <li>travel</li></a>
             </ul>
         </nav>
     </header>
