--- a/index.html
+++ b/index.html
@@ -7,62 +7,54 @@
     <title>Кныш Ольга</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <a href="#More than just a music festival"> <li>lifestyle</li></a>
-                <a href="#Life tastes better than coffee"> <li>photodiary</li></a>
-                <a href="#American dream"> <li>music</li></a>
-                <a href="#A day exploring the Alps"> <li>travel</li></a>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <article>
-            <img src="https://ch0wdhury.github.io/MINIM0/images/service1.jpg" alt="девушка в толпе" width="400" height="270">
-                <p>Lifestyle</p>
-                    <h2> <a name="More than just a music festival"> More than just a music festival</a></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                           nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                           eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                           in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </article>
-        <article>
-            <img src="https://ch0wdhury.github.io/MINIM0/images/service2.jpg" alt="кофе" width="400" height="270">
-                <p>Lifestyle</p>
-                    <h2> <a name="Life tastes better than coffee"> Life tastes better than coffee</a></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                           nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-                           eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                           in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </article>
-        <article>
-            <img src="https://ch0wdhury.github.io/MINIM0/images/service3.jpg" alt="девушки и мост" width="400" height="270">
-                <p>Photodiary</p>
-                    <h2> <a name="American dream"> American dream</a></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                           nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                           eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                           in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </article>
-        <article>
-            <img src="https://ch0wdhury.github.io/MINIM0/images/service4.jpg" alt="девушка в шапке" width="400" height="270">
-                <p>Photodiary</p>
-                    <h2> <a name="A day exploring the Alps"> A day exploring the Alps</a></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-                          deserunt mollit anim id est laborum.</p>
-        </article>
-        <button>load more</button>
-    </main>
+    <div class="wrapper">
+        <header>
+            <nav>
+                <ul class="menu">
+                    <li class="memu-item"><a href="#lifestyle" class="menu-link">lifestyle</a></li>
+                    <li class="memu-item"><a href="#photodiary" class="menu-link">photodiary</a></li>
+                    <li class="memu-item"><a href="#music" class="menu-link">music</a></li>
+                    <li class="memu-item"><a href="#travel" class="menu-link">travel</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="main">
+            <div class="box">
+                <img src="./img/Снимок.PNG" alt="lifestyle" width="420">
+                <h5 class="box-subtitle" id="lifestyle">lifestyle</h5>
+                <h4 class="box-title">More than just a music festival </h4>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                    quis nostrud exercitation ullamco laboris </p>
+            </div>
+            <div class="box">
+                <img src="./img/Снимокв.PNG" alt="photodiary" width="420">
+                <h5 class="box-subtitle" id="photodiary">lifestyle</h5>
+                <h4 class="box-title">Life tastes better with coffee</h4>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                    quis nostrud exercitation ullamco laboris </p>
+            </div>
+            <div class="box">
+                <img src="./img/Снимоквф.PNG" alt="music" width="420">
+                <h5 class="box-subtitle" id="music">photodiary</h5>
+                <h4 class="box-title">American dream</h4>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                    quis nostrud exercitation ullamco laboris </p>
+            </div>
+            <div class="box">
+                <img src="./img/фв.PNG" alt="travel" width="420">
+                <h5 class="box-subtitle" id="travel">photodiary</h5>
+                <h4 class="box-title">A day exploring the Alps</h4>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                    quis nostrud exercitation ullamco laboris </p>
+            </div>
+        </div>
+        <footer>
+            <button class="btn-footer">Load more</button>
+        </footer>
+    </div>
 </body>
 </html>
