--- a/index.html
+++ b/index.html
@@ -18,43 +18,42 @@
                 </ul>
             </nav>
         </header>
-        <div class="main">
-            <div class="box">
-                <img src="./img/Снимок.PNG" alt="lifestyle" width="420">
-                <h5 class="box-subtitle" id="lifestyle">lifestyle</h5>
-                <h4 class="box-title">More than just a music festival </h4>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        <main>
+            <article>
+                <img src="./img/Снимок.PNG" alt="lifestyle" width="420" height="280">
+                <p id="lifestyle">Lifestyle</p>
+                <h2>More than just a music festival</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                    quis nostrud exercitation ullamco laboris </p>
-            </div>
-            <div class="box">
-                <img src="./img/Снимокв.PNG" alt="photodiary" width="420">
-                <h5 class="box-subtitle" id="photodiary">lifestyle</h5>
-                <h4 class="box-title">Life tastes better with coffee</h4>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    quis nostrud exercitation ullamco laboris</p>
+            </article>
+            <article>
+            <article>
+                <img src="./img/Снимокв.PNG" alt="photodiary" width="420" height="280">
+                <p id="photodiary">Lifestyle</p>
+                <h2> Life tastes better than coffee</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                    quis nostrud exercitation ullamco laboris </p>
-            </div>
-            <div class="box">
-                <img src="./img/Снимоквф.PNG" alt="music" width="420">
-                <h5 class="box-subtitle" id="music">photodiary</h5>
-                <h4 class="box-title">American dream</h4>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    quis nostrud exercitation ullamco laboris</p>
+            </article>
+            <article>
+                <img src="./img/Снимоквф.PNG" alt="music" width="420" height="280">
+                <p id="music">Photodiary</p>
+                <h2> American dream</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                    quis nostrud exercitation ullamco laboris </p>
-            </div>
-            <div class="box">
-                <img src="./img/фв.PNG" alt="travel" width="420">
-                <h5 class="box-subtitle" id="travel">photodiary</h5>
-                <h4 class="box-title">A day exploring the Alps</h4>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    quis nostrud exercitation ullamco laboris</p>
+            </article>
+            <article>
+                <img src="./img/фв.PNG" alt="travel" width="420" height="280">
+                <p id="travel">Photodiary</p>
+                <h2>A day exploring the Alps</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                    quis nostrud exercitation ullamco laboris </p>
-            </div>
-        </div>
-        <footer>
-            <button class="btn-footer">Load more</button>
-        </footer>
+                    quis nostrud exercitation ullamco laboris</p>
+            </article>
+            <button>Load more</button>
+        </main>
     </div>
 </body>
 </html>
